Fixed issue that causing compilation error - added back mixins, variables and styles scss

--- a/generators/app/templates/src/_styles/main.scss
+++ b/generators/app/templates/src/_styles/main.scss
@@ -2,6 +2,9 @@
 @import '../../node_modules/normalize.css/normalize';
 
 // Site Mixins, Variables and Fonts here
+@import "./_mixins";
+@import "./_var";
+@import "./_styles";
 @import "./_fonts";
 
 *,
