--- a/generators/app/templates/src/index.pug
+++ b/generators/app/templates/src/index.pug
@@ -1,6 +1,6 @@
 extends _layouts/base
 
-include ./_modules/button/button
+include ./_modules/atoms/button/button
 
 block config
   - var page = 'homepage'
