--- a/generators/app/templates/src/_styles/_var.scss
+++ b/generators/app/templates/src/_styles/_var.scss
@@ -9,7 +9,7 @@ $bpXLgDesktop: 1366px;
 $gutter: 20px;
 
 /* Font */
-$primaryFont: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$primaryFont: 'Roboto', Helvetica, Arial, sans-serif;
 $base-fontsize: 16px;
 $base-lineheight: 1.5;
 $thin: 100;
