Added tailwind css to webpack postCSS

--- a/generators/app/templates/src/_styles/main.scss
+++ b/generators/app/templates/src/_styles/main.scss
@@ -7,6 +7,11 @@
 @import "./_styles";
 @import "./_fonts";
 
+// Tailwind
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 *,
 *:before,
 *:after {
