--- a/generators/app/templates/src/index.pug
+++ b/generators/app/templates/src/index.pug
@@ -8,7 +8,7 @@ block config
 
 block content
   .yeo-info
-    .logo.vh
+    .logo.hidden
       img(src="/assets/images/logo.png" alt="Amiculum Digital Logo" width="184" height="209")
     .logo 
       svg(width='184' height='198' viewBox='0 0 104 118' fill='none' xmlns='http://www.w3.org/2000/svg')
