--- a/generators/app/templates/src/index.pug
+++ b/generators/app/templates/src/index.pug
@@ -27,7 +27,7 @@ block content
             stop(stop-color='#FBBA00')
             stop(offset='1' stop-color='#F39200')
 
-    h1.title.text-center= site.data.info.title
+    h1.font-bold.text-center= site.data.info.title
     
     p.text-center Thank you for using Amiculum YEO site generator,
       br 
@@ -36,6 +36,7 @@ block content
       |, click on the button below
     
     +button({
+      "__class": "my-10",
       "__text": "Learn More", 
       "__link": "https://www.npmjs.com/package/generator-yeo",
       "__target": "_blank"
