Minor updates for index and base template - added favicon markup

--- a/generators/app/templates/src/index.pug
+++ b/generators/app/templates/src/index.pug
@@ -39,7 +39,7 @@ block content
     
     +button({
       "__class": "my-10 ring-4 ring-yellow-500 ring-opacity-50",
-      "__text": "Learn More 2", 
+      "__text": "Learn More", 
       "__link": "https://www.npmjs.com/package/generator-yeo",
       "__target": "_blank"
     })
