--- a/generators/app/templates/src/_layouts/base.pug
+++ b/generators/app/templates/src/_layouts/base.pug
@@ -21,6 +21,7 @@ head
   title= (isHome) ? pageTitle : 'Amiculum Digital | ' + pageTitle
   meta(name='description', content= 'Media Literacy Council')
   meta(name='viewport', content='width=device-width, initial-scale=1.0')
+  link(rel='icon' type='image/png' href='/favicon.ico')
   block stylesheets
     link(rel='stylesheet', href= '/assets/styles/main.css')
 
