Updated webpack version to 5 and updated dev dependencies plugins to run under webpack5

--- a/generators/page/templates/page.pug
+++ b/generators/page/templates/page.pug
@@ -11,7 +11,7 @@ block config
   - var page = '<%= name %>'
   - var site = htmlWebpackPlugin.options //global site data
   - var env = site.env
-  - var dir = site.name
+  - var dir = site.directory
 
 block content
   p <%= name %> page
