--- a/generators/app/templates/src/_styles/_mixins.scss
+++ b/generators/app/templates/src/_styles/_mixins.scss
@@ -168,13 +168,13 @@
 }
 
 @mixin mobile {
-  @media (max-width: $bpTablet - 1) {
+  @media (max-width: ($bpTablet - 1)) {
     @content;
   }
 }
 
 @mixin tablet {
-  @media (min-width: $bpTablet) and (max-width: $bpDesktop - 1) {
+  @media (min-width: $bpTablet) and (max-width: ($bpDesktop - 1)) {
     @content;
   }
 }
